Fix: reduce spacing between time and direction

--- a/css/vvs.css
+++ b/css/vvs.css
@@ -1,5 +1,5 @@
 .time-span {
-    width: 130px;
+    width: 80px;
     display: inline-block;
 }
 
